--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -2,7 +2,8 @@
   "name": "napi",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node -r esbuild-register ./src/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.11.1",
@@ -11,6 +12,8 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "esbuild": "^0.20.1",
+    "esbuild-register": "^3.5.0"
   }
 }
