--- a/apps/napi/tsconfig.json
+++ b/apps/napi/tsconfig.json
@@ -1,10 +1,20 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "lib": ["ES2015"],
+    "lib": [
+      "ES2015"
+    ],
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "."
   },
-  "exclude": ["node_modules"],
-  "include": ["src"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.test.tsx"
+  ],
+  "include": [
+    "src",
+    "."
+  ]
 }
