--- a/apps/napi/tsconfig.json
+++ b/apps/napi/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "bundler",
+    "module": "Preserve",
+    "esModuleInterop": true,
     "lib": [
       "ES2015"
     ],
     "outDir": "./dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "paths": {
+      "@db/*": [
+        "./src/db/*"
+      ],
+    }
   },
   "exclude": [
     "node_modules",
