--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3"
 
 services:
   pg:
-    container_name: pg
     image: postgres
     restart: always
     environment:
@@ -13,6 +12,8 @@ services:
       - 5432:5432
     networks:
       - app_network
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
   # web:
   #   container_name: web
   #   build:
@@ -23,16 +24,7 @@ services:
   #     - 3000:3000
   #   networks:
   #     - app_network
-  # api:
-  #   container_name: api
-  #   build:
-  #     context: .
-  #     dockerfile: ./apps/api/Dockerfile
-  #   restart: always
-  #   ports:
-  #     - 3001:3001
-  #   networks:
-  #     - app_network
+
   # napi:
     # container_name: napi
     # build:
@@ -45,3 +37,6 @@ services:
     #   - app_network
 networks:
   app_network:
+
+volumes:
+  postgres_data:
