chore: Add unique constraint for email in users table and update environment variables

--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "node -r esbuild-register ./src/index.ts",
     "migrate": "drizzle-kit migrate",
-    "generate": "drizzle-kit generate"
+    "generate": "drizzle-kit generate",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@hono/node-server": "^1.11.1",
