--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PG_DB_URL=postgres://postgres:postgres@localhost:5432/postgres
 JWT_SECRET_KEY=your-secret-key
 JWT_TOKEN_EXPIRY=1h
 REFRESH_TOKEN_EXPIRY=1h
+NODE_ENV=development
