--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,18 +9,61 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/uuid": "^9.0.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "hono": "^4.2.9",
+    "immer": "^10.1.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.373.0",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.0.18",
+    "react-use": "^17.5.0",
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.4.41",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-mousetrap": "^1.0.4",
+    "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.1.1",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/lodash": "^4.17.1",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18",
     "@repo/eslint-config": "workspace:*",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
     "@repo/typescript-config": "workspace:*",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
