--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -12,23 +12,30 @@
   "dependencies": {
     "@hono/node-server": "^1.11.1",
     "@hono/zod-validator": "^0.2.1",
+    "@react-email/render": "^0.0.14",
     "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.3.7",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "socket.io": "^4.7.5",
-    "zod": "^3.23.8"
+    "transactional": "workspace:*",
+    "zod": "^3.23.8",
+    "react": "^18.2.0",
+    "@react-email/components": "0.0.18"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
+    "@nezuko/typescript-config": "workspace:*",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
+    "@types/react": "^18.0.22",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "drizzle-kit": "^0.21.2",
