--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,10 +57,10 @@
     "@types/lodash": "^4.17.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
-    "@repo/eslint-config": "workspace:*",
+    "@nezuko/eslint-config": "workspace:*",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "@repo/typescript-config": "workspace:*",
+    "@nezuko/typescript-config": "workspace:*",
     "typescript": "^5.3.3",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
