chore: Update npm dependencies and configuration files for web app and napi app

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@nezuko/typescript-config/nextjs.json",
   "compilerOptions": {
+    "allowJs": true,
+    "declaration": false,
+    "declarationMap": false,
     "plugins": [
       {
         "name": "next"
@@ -12,12 +15,14 @@
       ]
     }
   },
+  
   "include": [
     "next-env.d.ts",
     "next.config.js",
     "**/*.ts",
+    "**/*.*js",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
   ],
   "exclude": [
     "node_modules"
