--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,16 +25,20 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "@types/uuid": "^9.0.8",
+    "@typeschema/zod": "^0.13.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^0.6.0",
     "hono": "^4.2.9",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-safe-action": "7.0.0-next.44",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -50,20 +54,22 @@
     "use-mousetrap": "^1.0.4",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
-    "zod": "^3.23.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@nezuko/eslint-config": "workspace:^",
+    "@nezuko/typescript-config": "workspace:*",
     "@tailwindcss/typography": "^0.5.13",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/cookie": "^0.6.0",
     "@types/lodash": "^4.17.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
-    "@nezuko/eslint-config": "workspace:*",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "@nezuko/typescript-config": "workspace:*",
-    "typescript": "^5.3.3",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
