--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.11.1",
+    "@hono/swagger-ui": "^0.2.2",
+    "@hono/zod-openapi": "^0.13.0",
     "@hono/zod-validator": "^0.2.1",
+    "@react-email/components": "0.0.18",
     "@react-email/render": "^0.0.14",
     "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.30.10",
@@ -21,11 +24,11 @@
     "lodash": "^4.17.21",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
+    "react": "^18.2.0",
     "socket.io": "^4.7.5",
     "transactional": "workspace:*",
-    "zod": "^3.23.8",
-    "react": "^18.2.0",
-    "@react-email/components": "0.0.18"
+    "winston": "^3.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nezuko/typescript-config": "workspace:*",
@@ -36,6 +39,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
     "@types/react": "^18.0.22",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "drizzle-kit": "^0.21.2",
