--- a/apps/napi/tsconfig.json
+++ b/apps/napi/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Bundler",
+    "composite": true,
     "module": "ES2015",
     "jsx": "preserve",
     "esModuleInterop": true,
