--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -22,6 +22,7 @@
     "hono": "^4.3.7",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "ms": "^2.1.3",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "react": "^18.2.0",
@@ -35,6 +36,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.4",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
