--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -17,6 +17,7 @@
     "@react-email/components": "0.0.18",
     "@react-email/render": "^0.0.14",
     "bcrypt": "^5.1.1",
+    "cheerio": "1.0.0-rc.12",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.3.7",
