--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,9 +6,12 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint . --max-warnings 0",
-    "start": "next start"
+    "start": "next start",
+    "ui": "pnpm dlx shadcn-ui@latest"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lint": "^6.8.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -20,6 +23,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
@@ -31,12 +35,19 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/uuid": "^9.0.8",
     "@typeschema/zod": "^0.13.3",
+    "@uiw/codemirror-extensions-basic-setup": "^4.22.1",
+    "@uiw/codemirror-extensions-langs": "^4.22.1",
+    "@uiw/codemirror-theme-basic": "^4.22.1",
+    "@uiw/codemirror-theme-github": "^4.22.1",
+    "@uiw/react-codemirror": "^4.22.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "codemirror": "^6.0.1",
     "cookie": "^0.6.0",
     "hono": "^4.2.9",
     "immer": "^10.1.1",
+    "jsonlint": "^1.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
@@ -44,6 +55,7 @@
     "next-safe-action": "7.0.0-next.44",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
@@ -65,6 +77,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/cookie": "^0.6.0",
+    "@types/jsonlint": "^1.6.3",
     "@types/lodash": "^4.17.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
