--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -10,6 +10,7 @@
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@hono/node-server": "^1.11.1",
     "@hono/swagger-ui": "^0.2.2",
     "@hono/zod-openapi": "^0.13.0",
@@ -17,16 +18,23 @@
     "@react-email/components": "0.0.18",
     "@react-email/render": "^0.0.14",
     "bcrypt": "^5.1.1",
+    "bee-queue": "^1.7.1",
     "cheerio": "1.0.0-rc.12",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
+    "genson-js": "^0.0.8",
     "hono": "^4.3.7",
+    "json-schema-to-ts": "^3.1.0",
+    "json-schema-to-typescript": "^14.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
+    "quicktype": "^23.0.170",
+    "quicktype-core": "^23.0.170",
     "react": "^18.2.0",
+    "redis": "^4.6.14",
     "socket.io": "^4.7.5",
     "transactional": "workspace:*",
     "winston": "^3.13.0",
@@ -42,7 +50,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
     "@types/react": "^18.0.22",
-    "@types/winston": "^2.4.4",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "drizzle-kit": "^0.21.2",
