--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "ui": "pnpm dlx shadcn-ui@latest"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lint": "^6.8.0",
     "@hookform/resolvers": "^3.3.4",
@@ -17,6 +18,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -47,6 +49,7 @@
     "cookie": "^0.6.0",
     "hono": "^4.2.9",
     "immer": "^10.1.1",
+    "json-schema-to-typescript": "^14.0.5",
     "jsonlint": "^1.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.373.0",
@@ -66,6 +69,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-editable": "^2.3.3",
     "use-mousetrap": "^1.0.4",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
