feat: Add public route for project retrieval

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,7 +47,9 @@
     "cmdk": "^1.0.0",
     "codemirror": "^6.0.1",
     "cookie": "^0.6.0",
+    "fetch-to-curl": "^0.6.0",
     "hono": "^4.2.9",
+    "http-to-curl": "^1.4.3",
     "immer": "^10.1.1",
     "json-schema-to-typescript": "^14.0.5",
     "jsonlint": "^1.6.3",
