--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ JWT_TOKEN_EXPIRY=2h
 REFRESH_TOKEN_EXPIRY=5h
 NODE_ENV=development
 REDIS_URL=redis://localhost:6379
+NEXT_PUBLIC_DIRECT_BACKEND_URL=http://localhost:3001
