--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.0.0",
     "codemirror": "^6.0.1",
     "cookie": "^0.6.0",
+    "css-selector-generator": "^3.6.8",
     "fetch-to-curl": "^0.6.0",
     "hono": "^4.2.9",
     "http-to-curl": "^1.4.3",
