--- a/apps/select-ext/package.json
+++ b/apps/select-ext/package.json
@@ -15,11 +15,13 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@medv/finder": "^3.2.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "webext-bridge": "^6.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.46",
