--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "env-cmd turbo run build",
     "clean": "turbo run clean",
-    "dev": "env-cmd turbo run dev",
+    "dev": "env-cmd turbo run dev --env-mode",
     "start": "env-cmd turbo run start",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@nezuko/eslint-config": "workspace:*",
     "prettier": "^3.2.5",
-    "turbo": "latest"
+    "turbo": "^2.0.1"
   },
   "engines": {
     "node": ">=14.0.0",
