--- a/apps/napi/package.json
+++ b/apps/napi/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
+    "hmd": "workspace:*",
     "@hono/node-server": "^1.11.1",
     "@hono/swagger-ui": "^0.2.2",
     "@hono/zod-openapi": "^0.13.0",
