--- a/packages/h-md/Cargo.toml
+++ b/packages/h-md/Cargo.toml
@@ -9,8 +9,12 @@ crate-type = ["cdylib"]
 [dependencies]
 html2text = "0.12.5"
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
+napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
 napi-derive = "2.12.2"
+reqwest = "0.12.4"
+select = "0.6.0"
+serde_json = "1.0.117"
+thiserror = "1.0.61"
 
 [build-dependencies]
 napi-build = "2.0.1"
